--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link href="css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="fonts/stylesheet.css">   
 	<link rel="stylesheet" href="css/style3.css">
+  <link rel="stylesheet" href="css/normalized.css">
     
     
  </head>
@@ -49,7 +50,7 @@
               <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="pricing.html">Pricing</a>
@@ -122,7 +123,7 @@
 <label class='sr-only'>
 Full Name
 </label>
-<div class="form-group string optional company_lead_full_name"><input class="string optional form-control placeholder" id="company_lead_full_name" name="company_lead[full_name]" placeholder="Full Name" size="50" type="text" value="" /></div>
+<div class="form-group string optional company_lead_full_name"><input class="string optional form-control placeholder" id="company_lead_full_name" name="company_lead[full_name]" placeholder="Full Name" size="50" type="text" autofocus="autofocus" value="" /></div>
 </div>
 <div class='form-group' id='work-email'>
 <label class='sr-only'>
@@ -409,7 +410,7 @@ favorites
 
           </div>
 
-          <div class="col-sm-6 twitter-quote-embed">
+          <div class="col-sm-6 twitter-quote-embed" id="tweet-2">
 		  <div class="header">
 <div class="h-card p-author" data-scribe="component:author">
 <a class="u-url profile" href="#">
@@ -492,7 +493,7 @@ favorites
 
         <div class="row">
           <div class="col-sm-6 twitter-quote-embed">
-		  <img style="margin-bottom:20px;" class="autosized-media" width="483" height="304" data-height="378" data-width="600" title="View image on Twitter" alt="View image on Twitter" src="img/Bz7CdsFCMAAbyP3.png:large">
+		  <img style="margin-bottom:20px;" class="autosized-media" width="483" height="304" data-height="378" data-width="600" title="View image on Twitter" alt="View image on Twitter" src="img/option.png">
 		  <div class="header">
 				<div class="h-card p-author" data-scribe="component:author">
 					<a class="u-url profile" href="#">
@@ -566,7 +567,7 @@ favorites
 
           </div>
 
-          <div class="col-sm-6 twitter-quote-embed">
+          <div class="col-sm-6 twitter-quote-embed" id="tweet-2">
 		  <img style="margin-bottom:20px;" class="autosized-media" width="483" height="304" data-height="378" data-width="600" title="View image on Twitter" alt="View image on Twitter" src="img/Breo-1lCEAEmQWP.png">
 		  <div class="header">
 			<div class="h-card p-author" data-scribe="component:author">
@@ -769,33 +770,19 @@ favorites
       </div>
     </div>
 
-    <div class="row price-slider-wrapper">
+      <div class="row price-slider-wrapper">
   <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
     <span id="base">
+      <noscript>
+        $25 per company + $4 per person
+      </noscript>
       <div id="zen-slider-url" class="hidden">
         <a href="#">Request Invite</a>
       </div>
       <div id="zen-slider-contact" class="hidden">
         <a href="#">Contact Us for Enterprise Pricing</a>
       </div>
-      <div class="zen-slider">
-		<div class="slider ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
-		<div class="ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min" style="width: 0%;">
-		</div>
-			<span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0" style="left: 0%;">
-				<div class="tooltip" style="top: -154px; left: -82.5px; opacity: 1;">
-				<div class="tooltip-header"></div>
-				<div class="tooltip-content">
-					<h3>1 person</h3>
-						<ul>
-						<li>$25 base price</li>
-						<li>$4/person x 1 person</li>
-						</ul>
-				</div>
-				</div>
-			</span>
-		</div>
-	</div>
+      <div class="zen-slider"></div>
     </span>
   </div>
 </div>
@@ -953,13 +940,13 @@ favorites
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="#">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="#">FAQs</a>
@@ -996,7 +983,7 @@ favorites
               <a href="#">Press</a>
             </li>
             <li>
-              <a href="#">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="#">Help Center</a>
