--- a/payday.html
+++ b/payday.html
@@ -50,7 +50,7 @@
               <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="pricing.html">Pricing</a>
@@ -109,7 +109,7 @@
               <div class="dotted-hr-light"></div>
               <p class="tour-next-link">
                 <span>Next:</span>
-                <a class="paragraph-cta" href="support.html">Incredible customer support<span class="right-angle"><i class="fa fa-angle-right"></i></span>
+                <a class="paragraph-cta" href="tour_support.html">Incredible customer support
                 </a>
               </p>
 
@@ -204,13 +204,13 @@
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="javascript:void(0);">FAQs</a>
@@ -247,7 +247,7 @@
               <a href="javascript:void(0);">Press</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="javascript:void(0);">Help Center</a>
