--- a/pricing.html
+++ b/pricing.html
@@ -47,13 +47,13 @@
       <div class="collapse navbar-collapse no-transition" id="corporate-nav-bar">
         <ul class="nav navbar-nav">
             <li>
-              <a href="#">Tour</a>
+              <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
 
             <li class="dropdown">
@@ -75,7 +75,7 @@
 
 
             <li>
-              <a class="btn sign-in" href="#">Sign In</a>
+              <a class="btn sign-in" href="login.html">Sign In</a>
             </li>
 
           <li>
@@ -126,10 +126,10 @@
         $25 per company + $4 per person
       </noscript>
       <div id="zen-slider-url" class="hidden">
-        <a href="/company_invite">Request Invite</a>
+        <a href="#">Request Invite</a>
       </div>
       <div id="zen-slider-contact" class="hidden">
-        <a href="/contact">Contact Us for Enterprise Pricing</a>
+        <a href="#">Contact Us for Enterprise Pricing</a>
       </div>
       <div class="zen-slider"></div>
     </span>
@@ -209,7 +209,7 @@
               <p>
                 No payment information is needed to sign up for ZenPayroll.
                 Your first two months are free with unlimited payroll runs, including correction and 
-				bonus payrolls.Once your first two months have passed, we will automatically debit your
+				bonus payrolls. Once your first two months have passed, we will automatically debit your
 				company bank account each month so there's no need for invoicing.
                 After your free trial, pricing starts at just $29/month.
               </p>
@@ -320,13 +320,13 @@
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="#">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="#">FAQs</a>
@@ -363,7 +363,7 @@
               <a href="#">Press</a>
             </li>
             <li>
-              <a href="#">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="#">Help Center</a>
