--- a/autopilot.html
+++ b/autopilot.html
@@ -47,13 +47,13 @@
       <div class="collapse navbar-collapse no-transition" id="corporate-nav-bar">
         <ul class="nav navbar-nav">
             <li>
-              <a href="#">Tour</a>
+              <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
 
             <li class="dropdown">
@@ -107,7 +107,7 @@
               </p>
               <div class="dotted-hr-light"></div>
               <p class="tour-next-link">
-                <span>Next:</span><a class="paragraph-cta" href="taxes.html">Taxes paid &amp; filed<span class="right-angle"><i class="fa fa-angle-right"></i></span></a>
+                <span>Next:</span> <a class="paragraph-cta" href="taxes.html">Taxes paid &amp; filed</a>
               </p>
 
             </div>
@@ -177,13 +177,13 @@
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="javascript:void(0);">FAQs</a>
@@ -220,7 +220,7 @@
               <a href="javascript:void(0);">Press</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="javascript:void(0);">Help Center</a>
