--- a/employees.html
+++ b/employees.html
@@ -46,13 +46,13 @@
       <div class="collapse navbar-collapse no-transition" id="corporate-nav-bar">
         <ul class="nav navbar-nav">
             <li>
-              <a href="#">Tour</a>
+              <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
 
             <li class="dropdown">
@@ -74,7 +74,7 @@
 
 
             <li>
-              <a class="btn sign-in" href="#">Sign In</a>
+              <a class="btn sign-in" href="login.html">Sign In</a>
             </li>
 
           <li>
@@ -117,25 +117,25 @@
       <div class="collapse navbar-collapse" id="corporate-subnav-bar">
         <ul class="nav navbar-nav">
           <li>
-            <a href="#" class="">Feature List</a>
+            <a href="features.html" class="">Feature List</a>
           </li>
           <li>
-            <a href="#" class="current">Employees</a>
+            <a href="employees.html" class="current">Employees</a>
           </li>
           <li>
-            <a href="#" class="">Automated</a>
+            <a href="automatic.html" class="">Automated</a>
           </li>
           <li>
-            <a href="#" class="">Advanced</a>
+            <a href="advanced.html" class="">Advanced</a>
           </li>
           <li>
             <a href="#" class="">Integrations</a>
           </li>
           <li>
-            <a href="#" class="">Support</a>
+            <a href="support.html" class="">Support</a>
           </li>
           <li>
-            <a href="#">Security</a>
+            <a href="security.html">Security</a>
           </li>
         </ul>
       </div>
@@ -295,13 +295,13 @@
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="#">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="#">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="#">FAQs</a>
@@ -338,7 +338,7 @@
               <a href="#">Press</a>
             </li>
             <li>
-              <a href="#">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="#">Help Center</a>
