--- a/onboarding.html
+++ b/onboarding.html
@@ -15,12 +15,11 @@
 	  <link href="css/font-awesome.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="fonts/stylesheet.css">   
     <link rel="stylesheet" href="css/style3.css"> 
-    <link rel="stylesheet" href="css/auto.css">
     
     
  </head>
 
-<body>
+<body class="corporate tour">
 
 
   <nav id="corporate-main-nav" class="navbar navbar-default navbar-fixed-top ">
@@ -50,7 +49,7 @@
               <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="pricing.html">Pricing</a>
@@ -108,7 +107,7 @@
               </p>
               <div class="dotted-hr-light"></div>
               <p class="tour-next-link">
-                <span>Next:</span> <a class="paragraph-cta" href="payday.html">Make payday a celebration<span class="right-angle"><i class="fa fa-angle-right"></i></span></a>
+                <span>Next:</span> <a class="paragraph-cta" href="payday.html">Make payday a celebration</a>
               </p>
 
             </div>
@@ -135,11 +134,11 @@
 </div>
 
 
-<section class="gradient-light-gold" id="bottom-signup-cta">
+    <section id="bottom-signup-cta" class="gradient-light-gold">
   <div class="container">
     <div class="zen-rocks-header">
       <div class="zen-rocks text-center">
-        <img src="img/stone-icon.png" data-at2x="img/stone-icon.png" alt="stone icon">
+        <img alt="Icon-zen-rocks" src="img/icon-zen-rocks-244f5c29ad6fa91f4725d04b27201657.png" />
       </div>
     </div>
     <div class="row">
@@ -147,50 +146,50 @@
         <h3>Start using ZenPayroll today</h3>
 
         <p>Your first 2 months are free</p>
-        <form id="landing-signup-form">
+        <form id="landing-signup-form" method="GET">
           <div class="input-append">
-            <button class="btn get-start" type="submit">Get Started Now</button>
+            <button type="submit" class="btn primary">Get Started Now</button>
           </div>
         </form>
       </div>
     </div>
       <div class="row alternate-ctas">
         <div class="col-sm-10 col-sm-offset-1">
+          <div class="dotted-hr"></div>
           <div class="col-sm-4 text-center secondary-cta">
             <h5>New business</h5>
-            <p><a class="clean" href="javascript:void(0);">Easy to set up payroll online&nbsp;&gt;</a></p>
+            <p><a href="#" class="clean">Easy to set up payroll online&nbsp;></a></p>
           </div>
           <div class="col-sm-4 text-center secondary-cta">
             <h5>Want to switch?</h5>
-            <p><a class="clean" href="javascript:void(0);">Three simple steps&nbsp;&gt;</a></p>
+            <p><a href="#" class="clean">Three simple steps&nbsp;></a></p>
           </div>
           <div class="col-sm-4 text-center secondary-cta">
             <h5>See it live</h5>
-            <p><a class="clean" href="javascript:void(0);">Join our weekly demo&nbsp;&gt;</a></p>
+            <p><a href="#" class="clean">Join our weekly demo&nbsp;></a></p>
           </div>
         </div>
       </div>
   </div>
 </section>
 
-
-<section id="footer">
+    <section id="footer">
     <div class="container">
       <div class="row">
         <div class="col-xs-6 col-sm-3 col-lg-2">
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
-              <a href="javascript:void(0);">FAQs</a>
+              <a href="#">FAQs</a>
             </li>
           </ul>
         </div>
@@ -198,16 +197,16 @@
           <h4>Get Started</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Accountants</a>
+              <a href="#">Accountants</a>
             </li>
             <li>
-              <a href="javascript:void(0);">New Company</a>
+              <a href="#">New Company</a>
             </li>
             <li>
-              <a href="javascript:void(0);">See How We Compare</a>
+              <a href="#">See How We Compare</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Software Integrations</a>
+              <a href="#">Software Integrations</a>
             </li>
           </ul>
         </div>
@@ -215,19 +214,19 @@
           <h4>Resources</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Customer Stories</a>
+              <a href="#">Customer Stories</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Videos + Downloads</a>
+              <a href="#">Videos + Downloads</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Press</a>
+              <a href="#">Press</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Help Center</a>
+              <a href="#">Help Center</a>
             </li>
           </ul>
         </div>
@@ -235,64 +234,76 @@
           <h4>ZenPayroll</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">About the Company</a>
+              <a href="#">About the Company</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Our Values</a>
+              <a href="#">Our Values</a>
             </li>
             <li>
-              <a href="javascript:void(0);">
-                <span class="careers-text">Careers</span> <span class="hiring-tag">We're Hiring!</span>
-</a>            </li>
+              <a href="#">
+                <span class="careers-text">Careers</span> 
+				<span class="hiring-tag">We're Hiring!</span>
+				</a>            
+			</li>
             <li>
-              <a href="javascript:void(0);">Contact Us</a>
+              <a href="#">Contact Us</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Engineering</a>
+              <a href="#">Engineering</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Blog</a>
+              <a href="#">Blog</a>
             </li>
           </ul>
         </div>
 
         <div class="col-xs-12 col-sm-12 col-lg-3 col-lg-offset-1 footer-phone">
           <h4>Questions?</h4>
-          <p>(800)&nbsp;936‑0383</p>
+          <p>(800)&nbsp;936&#8209;0383</p>
         </div>
       </div>
     </div>
   </section>
-
 
 <section id="sub-footer">
   <div class="container">
     <div class="row">
       <div class="col-md-2 col-lg-2 footer-logo">
         <a href="/">
-          <img src="img/footer-logo.png" class="img-responsive" alt="ZenPayroll Logo"></a>
-      </div>
+          <img alt="ZenPayroll Logo" class="img-responsive" src="img/zp-logo-white-sm-a779bdf5133687948b506f31118207a6.png" />
+</a>      </div>
       <div class="col-md-3 col-md-push-7 col-lg-2 col-lg-push-8">
         <ul class="social-btns">
-          <li><a target="_blank" class="twitter" href="javascript:void(0);">Twitter</a></li>
-          <li><a target="_blank" class="fb" href="javascript:void(0);">Facebook</a></li>
-          <li><a target="_blank" class="google" href="javascript:void(0);">Google Plus</a></li>
-          <li><a target="_blank" class="linkedin" href="javascript:void(0);">LinkedIn</a></li>
+          <li>
+            <a href="#" class="twitter" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="#" class="fb" target="_blank">Facebook</a>
+          </li>
+          <li>
+            <a href="#" class="google" target="_blank">Google Plus</a>
+          </li>
+          <li>
+            <a href="#" class="linkedin" target="_blank">LinkedIn</a>
+          </li>
         </ul>
       </div>
       <div class="col-md-7 col-md-pull-3 col-lg-8 col-lg-pull-2">
         <ul class="sub-footer-links">
           <li>
-            <a href="javascript:void(0);">Privacy Policy</a><span class="hidden-sm hidden-part">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+            <a href="#">Privacy Policy</a> 
+			<span class="hidden-sm hidden-xs">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
           </li>
           <li>
-            <p>&copy; ZenPayroll, Inc. <span class="designed-text">Designed and Built by ZenPayroll in San Francisco</span></p>
+            <p>&copy; ZenPayroll, Inc. 
+			<span class="designed-text">Designed and Built by ZenPayroll in San Francisco</span></p>
           </li>
         </ul>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
