--- a/taxes.html
+++ b/taxes.html
@@ -50,7 +50,7 @@
               <a href="autopilot.html">Tour</a>
             </li>
             <li>
-              <a href="#">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="pricing.html">Pricing</a>
@@ -222,13 +222,13 @@
           <h4>Product</h4>
           <ul class="footer-links">
             <li>
-              <a href="javascript:void(0);">Overview</a>
+              <a href="overview.html">Overview</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Pricing</a>
+              <a href="pricing.html">Pricing</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Features</a>
+              <a href="features.html">Features</a>
             </li>
             <li>
               <a href="javascript:void(0);">FAQs</a>
@@ -265,7 +265,7 @@
               <a href="javascript:void(0);">Press</a>
             </li>
             <li>
-              <a href="javascript:void(0);">Security</a>
+              <a href="security.html">Security</a>
             </li>
             <li>
               <a href="javascript:void(0);">Help Center</a>
